# yugioh-api-with-spark

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LEIAME.md  README.md  docker-compose.yml  pyproject.toml
notebook/: yugioh-api-with-spark.ipynb
postman/: Yu-Gi-Oh API.postman_collection.json
yugioh-api-with-spark/core/config/: logging_config.py
yugioh-api-with-spark/core/interfaces/: i_etl_service.py  i_extract_service.py  i_load_service.py  i_transform_service.py
yugioh-api-with-spark/core/services/etl/: etl_service.py
yugioh-api-with-spark/core/services/extract/: extract_service.py
yugioh-api-with-spark/core/services/load/: load_service.py
yugioh-api-with-spark/core/services/transform/: transform_service.py
yugioh-api-with-spark/core/utils/: http_utils.py  log_decorator.py  spark_session.py
yugioh-api-with-spark/pipeline/: pipeline_main.py
