[tool.poetry]
name = "yugioh-api-with-spark"
version = "0.1.0"
description = ""
authors = ["tonsatomicos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
pyspark = "^3.5.1"
requests = "^2.32.3"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
sparksql-magic = "^0.0.3"
pre-commit = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
